# mwgeditor

./: .gitignore  README.md
editor/: .gitignore  CMakeLists.txt  Makefile  README.md  go.sh  main.cpp  mwgeditor
editor/editor 2.xcodeproj/: project.pbxproj
editor/editor.xcodeproj/: project.pbxproj
editor/examples/: format.json  level1.json
editor/lib/glad/include/glad/: glad.h
editor/lib/imgui/: imgui_internal.h
editor/lib/imgui/examples/: imgui_impl_opengl3.cpp
editor/lib/imgui/examples/example_sdl_opengl3/: example_sdl_opengl3.sln
editor/lib/stb/: stb_image.h
editor/libs/imgui/: imgui_demo.cpp
editor/src/: assetman.cpp  assetman.h  editor.cpp  editor.h  global.cpp  global.h  levelmodel.h  loadjson.cpp  loadjson.h  main.cpp  recipeeditor.cpp  recipeeditor.h  savejson.cpp  savejson.h  textures.cpp  textures.h  util.cpp  visualizer.cpp  visualizer.h  vizmodel.h
lib/glad/src/: glad.c
lib/imfilebrowser/: imfilebrowser.h
lib/imgui/examples/example_sdl_opengl3/: example_sdl_opengl3.vcxproj  example_sdl_opengl3.vcxproj.filters
src/: editor.cpp  editor.h  levelmodel.h  savejson.cpp  util.cpp  util.h  vizmodel.h
